added password authentication to nginx

--- a/nginx/conf/conf.d/default.conf
+++ b/nginx/conf/conf.d/default.conf
@@ -10,6 +10,13 @@ server {
         index  index.html index.htm;
     }
 
+    location /restrict {
+        root   /usr/share/nginx/html;
+        index  index.html index.htm;
+	auth_basic "Shiny Server";
+	auth_basic_user_file /opt/etc/shadow;
+    }
+
     #error_page  404              /404.html;
 
     # redirect server error pages to the static page /50x.html
