added shiny with password protection

--- a/nginx/conf/conf.d/default.conf
+++ b/nginx/conf/conf.d/default.conf
@@ -55,10 +55,6 @@ server {
     ssl_certificate     /etc/nginx/jupyter.crt;
     ssl_certificate_key /etc/nginx/jupyter.key;
 
-    #location / {
-    #    proxy_pass https://jupyter2:8000;
-    #}
-
 
     location / {
         proxy_pass https://jupyter2:8000;
@@ -99,5 +95,33 @@ server {
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header Connection "upgrade";
       proxy_read_timeout 20d;
+    }
+    
+    location = /shiny/02_text/ {
+      rewrite ^/shiny/(.*)$ /$1 break;
+      auth_basic "Shiny Server";
+      auth_basic_user_file /opt/etc/shadow;
+      proxy_pass http://shiny:3838;
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
+      proxy_read_timeout 20d;
+    }
+    
+    location ~ /shiny/*/ {
+      rewrite ^/shiny/(.*)$ /$1 break;
+      proxy_pass http://shiny:3838;
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
+      proxy_read_timeout 20d;
+    }
+
+
+    location /restrict {
+        root   /usr/share/nginx/html;
+        index  index.html index.htm;
+	auth_basic "Shiny Server";
+	auth_basic_user_file /opt/etc/shadow;
     }
 }
