--- a/nginx/conf/conf.d/default.conf
+++ b/nginx/conf/conf.d/default.conf
@@ -57,7 +57,7 @@ server {
 
 
     location / {
-        proxy_pass https://jupyter2:8000;
+        proxy_pass https://jupyter:8000;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header Host $http_host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -70,8 +70,8 @@ server {
     }
 
     location ~* /(user/[^/]*)/(api/kernels/[^/]+/channels|terminals/websocket)/? {
-        proxy_pass https://jupyter2:8000;
-        #proxy_redirect https://jupyter2:8000/ $scheme://$host:8000/user;
+        proxy_pass https://jupyter:8000;
+        #proxy_redirect https://jupyter:8000/ $scheme://$host:8000/user;
 	
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header Host $http_host;
@@ -89,8 +89,8 @@ server {
 
     location /rstudio/ {
       rewrite ^/rstudio/(.*)$ /$1 break;
-      proxy_pass http://rstudio2:8787;
-      proxy_redirect http://rstudio2:8787/ $scheme://$host/rstudio/;
+      proxy_pass http://rstudio:8787;
+      proxy_redirect http://rstudio:8787/ $scheme://$host/rstudio/;
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header Connection "upgrade";
