--- a/nginx/conf/conf.d/default.conf
+++ b/nginx/conf/conf.d/default.conf
@@ -52,12 +52,12 @@ server {
 
 server {
     listen              443 ssl;
-    ssl_certificate     /etc/nginx/jupyter.crt;
-    ssl_certificate_key /etc/nginx/jupyter.key;
+    ssl_certificate     /etc/nginx/nginx.crt;
+    ssl_certificate_key /etc/nginx/nginx.key;
 
 
     location / {
-        proxy_pass https://jupyter:8000;
+        proxy_pass http://jupyter:8000;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header Host $http_host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -70,8 +70,8 @@ server {
     }
 
     location ~* /(user/[^/]*)/(api/kernels/[^/]+/channels|terminals/websocket)/? {
-        proxy_pass https://jupyter:8000;
-        #proxy_redirect https://jupyter:8000/ $scheme://$host:8000/user;
+        proxy_pass http://jupyter:8000;
+        #proxy_redirect http://jupyter:8000/ $scheme://$host:8000/user;
 	
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header Host $http_host;
